# intravenous

./: .clangd  .gitignore  CLANG_SOURCE_SPAN_PLAN.md  CMakeLists.txt  LICENSE  RESTRUCTURE_NOTES.md  benchmark.txt  flake.nix  shell.nix
benchmark/: CMakeLists.txt  render_benchmark.cpp
intravenous/: CMakeLists.txt  alligator.h  basic_nodes.h  block_rate_buffer.h  compat.h  dsl.h  execution_targets.h  fast_bitset.h  filesystem_paths.h  graph_build.h  graph_node.cpp  graph_node.h  juce_midi_input.h  juce_vst_wrapper.h  local_gamma_time_aligner.h  main.cpp  midi_node.h  node.h  node_execution.h  node_executor.h  node_layout.h  node_lifecycle.h  node_resources.h  node_tick.h  node_traits.h  note_number_lookup_table.h  polyblep.h  ports.h  public.h  wav.h
intravenous/basic_lane_nodes/: type_erased.h
intravenous/basic_nodes/: arithmetic.h  buffers.h  debug_probe.h  filters.cpp  filters.h  midi.h  noise.cpp  noise.h  predictors.cpp  predictors.h  routing.h  shaping.cpp  shaping.h  timing.h  type_erased.h
intravenous/devices/: audio.h  audio_device.h  channel_buffer_sink.h  miniaudio_device.h  wav_file_device.h
intravenous/graph/: build_types.h  builder.h  compiler.h  event_port_data_node.h  node.h  node_wrapper.h  plan.h  port_data_node.h  runtime.h  scc_wrapper.h  types.h  wiring.h
intravenous/juce/: midi_input.h  vst_runtime.cpp  vst_runtime.h  vst_wrapper.h
intravenous/lane_node/: graph.h
intravenous/math/: erfinv.h  polyblep.h
intravenous/module/: dependency.h  loader.cpp  loader.h  module.h  search_paths.h  watcher.cpp  watcher.h
intravenous/module/template/: CMakeLists.txt  JuceSupport.cmake  ModuleSupport.cmake  SourceSpanRewrite.cmake  module_pch.h
intravenous/modules/: module.h  noisy_saw.h  noisy_saw_project.h
intravenous/node/: executor.h  layout.h  lifecycle.h
intravenous/orchestrator/: orchestrator_builder.h
intravenous/query/: lane_query_dataset.h  lane_query_parser.cpp  lane_query_parser.h  lane_query_program.cpp  lane_query_program.h  lane_query_schema.h  lane_query_tokenizer.cpp  lane_query_tokenizer.h
intravenous/runtime/: app.cpp  config.cpp  config.h  crash_handlers.h  graph_input_lane_controller.h  graph_input_lanes.cpp  graph_input_lanes.h  graph_input_lanes_events.cpp  graph_input_lanes_events.h  graph_input_lanes_lane_views_bridge.cpp  graph_input_lanes_lane_views_bridge.h  graph_input_lanes_timeline_bridge.cpp  graph_input_lanes_timeline_bridge.h  handlers.h  iv_module_definitions.cpp  iv_module_definitions.h  iv_module_definitions_events.cpp  iv_module_definitions_events.h  iv_module_definitions_iv_module_instances_bridge.cpp  iv_module_definitions_iv_module_instances_bridge.h  iv_module_definitions_iv_module_reload_bridge.cpp  iv_module_definitions_iv_module_reload_bridge.h  iv_module_definitions_iv_module_source_introspection_bridge.cpp  iv_module_definitions_iv_module_source_introspection_bridge.h  iv_module_definitions_project_introspection_bridge.cpp  iv_module_definitions_project_introspection_bridge.h  iv_module_instance_types.h  iv_module_instances.cpp  iv_module_instances.h  iv_module_instances_events.cpp  iv_module_instances_events.h  iv_module_instances_graph_input_lanes_bridge.cpp  iv_module_instances_graph_input_lanes_bridge.h  iv_module_instances_iv_module_definitions_bridge.cpp  iv_module_instances_iv_module_definitions_bridge.h  iv_module_reload.cpp  iv_module_reload.h  iv_module_reload_events.cpp  iv_module_reload_events.h  iv_module_reload_iv_module_definitions_bridge.cpp  (+72 more)
src/intravenous/: CMakeLists.txt  block_rate_buffer.h  channel_ports.h  dsl.h  linker_event.h  main.cpp  ports.h  sample.h  wav.h
src/intravenous/basic_lane_nodes/: audio_file_capture.h  beat_trigger.h  controls.h  type_erased.h
src/intravenous/basic_nodes/: arithmetic.h  buffers.h  debug_probe.h  filters.h  midi.h  noise.h  predictors.h  routing.h  shaping.h  timing.h  type_erased.h
src/intravenous/devices/: audio_device.h  channel_buffer_sink.h  miniaudio_device.h  (+1 more)
tests/: CMakeLists.txt  architecture_smoke.cpp  architecture_smoke_gtest.cpp  block_processing.cpp  channels_gtest.cpp  detach_regression.cpp  detach_regression_gtest.cpp  fake_audio_device.h  graph_input_lanes_gtest.cpp  graph_logical_outputs_gtest.cpp  integration_gtest.cpp  iv_module_definitions_gtest.cpp  local_gamma_time_aligner_gtest.cpp  module_build_behavior.cpp  module_build_behavior_gtest.cpp  module_loader_failures.cpp  module_loader_failures_gtest.cpp  module_loader_reload.cpp  module_loader_reload_gtest.cpp  module_loader_variants.cpp  module_loader_variants_gtest.cpp  module_test_utils.h  module_watcher.cpp  module_watcher_gtest.cpp  node_block_executor_gtest.cpp  node_layout_storage.cpp  project_introspection_gtest.cpp  project_persistence_gtest.cpp  runtime_integration_gtest.cpp  runtime_module_bridges_gtest.cpp  runtime_project_gtest.cpp  runtime_test_harness.h  shared_buffer_context.cpp  shared_buffer_context_gtest.cpp  socket_rpc_bridge_gtest.cpp  socket_rpc_notification_bridge_gtest.cpp  socket_rpc_project_introspection_bridge_gtest.cpp  socket_rpc_server_gtest.cpp  socket_rpc_support_gtest.cpp  timeline_lanes_gtest.cpp
tests/bridges/: lane_filters_bridges_gtest.cpp  runtime_module_bridges_gtest.cpp  socket_rpc_iv_module_instances_bridge_gtest.cpp  socket_rpc_iv_module_source_introspection_bridge_gtest.cpp  socket_rpc_notification_bridge_gtest.cpp  socket_rpc_project_introspection_bridge_gtest.cpp  socket_rpc_timeline_execution_bridge_gtest.cpp
tests/modules/: audio_device_lanes_gtest.cpp  graph_input_lanes_gtest.cpp  graph_output_blocks_gtest.cpp  iv_module_definitions_gtest.cpp  iv_module_instances_execution_gtest.cpp  iv_module_instances_gtest.cpp  iv_module_reload_gtest.cpp  iv_module_source_introspection_gtest.cpp  lane_filters_gtest.cpp  lane_views_gtest.cpp  lanes_visualization_gtest.cpp  project_autosave_gtest.cpp  project_introspection_gtest.cpp  startup_config_gtest.cpp  task_runner_gtest.cpp  timeline_execution_gtest.cpp  timeline_lanes_gtest.cpp
tests/query/: lane_query_gtest.cpp
tools/: CMakeLists.txt  iv_clang_source_span_rewriter.cpp
(+405 files in other folders)
